[docs] Fix width overflow for documentation page on mobile screen

--- a/docs/main.css
+++ b/docs/main.css
@@ -59,6 +59,10 @@ body {
     .github-corner .octo-arm {
         animation: octocat-wave 560ms ease-in-out
     }
+
+    .js-to-chava-dict {
+        word-break: break-all;
+    }
 }
 
 .nav {
